I'm learning more about terminal and arguments