@@ -1,18 +1,42 @@
-## Getting Started
+### Understanding Compilation and Execution in Java Project Directorie
 
-Welcome to the VS Code Java world. Here is a guideline to help you get started to write Java code in Visual Studio Code.
+To understand why you were able to compile within the src directory and not in bin, it's important to review the structure of your project and the purpose of each directory.
 
-## Folder Structure
+#### Directory Structure in Java Projects
+- src: Typically contains the source files (.java).
+- bin: Typically contains the compiled files (.class).
 
-The workspace contains two folders by default, where:
+#### Compiling and Running Java Files
+1. Compiling in the src Directory:
+When you compile the code in the src directory, you are in the location where the source file (.java) is located. This makes compilation easier because you can reference the file directly.
 
-- `src`: the folder to maintain sources
-- `lib`: the folder to maintain dependencies
+´
+cd src
+javac --enable-preview --release 16 TerminalTest.java
+`
+The above command compiles TerminalTest.java in the src directory, generating the TerminalTest.class file in the same directory.
 
-Meanwhile, the compiled output files will be generated in the `bin` folder by default.
+2. Compiling in the bin Directory:
+Compiling from the bin directory requires you to reference the full path of the source file, which is in the src directory. You also need to specify where the compiled files should be placed.
 
-> If you want to customize the folder structure, open `.vscode/settings.json` and update the related settings there.
+`
+cd bin
+javac --enable-preview --release 16 -d . ../src/TerminalTest.java
+`
+The -d . command specifies that the compiled files should be placed in the current directory (bin). ../src/TerminalTest.java is the relative path to the source file.
 
-## Dependency Management
+#### Running the Compiled File
 
-The `JAVA PROJECTS` view allows you to manage your dependencies. More details can be found [here](https://github.com/microsoft/vscode-java-dependency#manage-dependencies).
+1.Running from the src Directory:
+If the compiled file (TerminalTest.class) is in the src directory, you can run it from there:
+`
+cd src
+java --enable-preview TerminalTest
+`
+
+2. Running from the bin Directory:
+If the compiled file is in the bin directory, you should be in that directory to run it:
+`
+cd bin
+java --enable-preview TerminalTest
+`
